Upgrade to GWT 2.13 and later jackson annotations