@@ -18,12 +18,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
-  </parent>
-
   <groupId>com.github.nmorel.gwtjackson</groupId>
   <artifactId>gwt-jackson-parent</artifactId>
   <version>0.15.5-SNAPSHOT</version>
@@ -74,38 +68,39 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <!-- the api has to be compatible with minimal jdk version supported by GWT -->
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.release>17</maven.compiler.release>
 
     <!-- Plugins version -->
-    <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-    <maven-site-plugin.version>3.3</maven-site-plugin.version>
-    <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
-    <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
-    <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
-    <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-    <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
-    <gwt-maven-plugin.version>2.7.0</gwt-maven-plugin.version>
+    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+    <maven-site-plugin.version>4.0.0</maven-site-plugin.version>
+    <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
+    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+    <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
+    <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
+    <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
+    <gwt-maven-plugin.version>1.2.0</gwt-maven-plugin.version>
 
     <!-- Dependencies version -->
-    <gwt.version>2.7.0</gwt.version>
-    <jackson.version>2.9.6</jackson.version>
-    <javapoet.version>1.0.0</javapoet.version>
-    <junit.version>4.12</junit.version>
+    <gwt.version>2.13.0</gwt.version>
+    <jackson-annotations.version>2.21</jackson-annotations.version>
+    <jackson-databind.version>2.21.1</jackson-databind.version>
+    <javapoet.version>1.13.0</javapoet.version>
+    <junit.version>4.13.2</junit.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
       <!-- GWT dependencies -->
       <dependency>
-        <groupId>com.google.gwt</groupId>
+        <groupId>org.gwtproject</groupId>
         <artifactId>gwt-user</artifactId>
         <version>${gwt.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>com.google.gwt</groupId>
+        <groupId>org.gwtproject</groupId>
         <artifactId>gwt-dev</artifactId>
         <version>${gwt.version}</version>
         <scope>provided</scope>
@@ -115,18 +110,18 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>${jackson.version}</version>
+        <version>${jackson-annotations.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>${jackson.version}</version>
+        <version>${jackson-annotations.version}</version>
         <classifier>sources</classifier>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson.version}</version>
+        <version>${jackson-databind.version}</version>
       </dependency>
 
       <!-- Generator dependencies -->
@@ -169,7 +164,7 @@
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
             <!--Only required due to a GWT DateTimeFormat issue see https://github.com/gwtproject/gwt/issues/8259-->
-            <argLine>-Duser.timezone=UTC</argLine>
+            <argLine>-Duser.timezone=UTC --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
 
@@ -186,69 +181,27 @@
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>${maven-javadoc-plugin.version}</version>
+          <configuration>
+            <failOnError>false</failOnError>
+            <doclint>none</doclint>
+          </configuration>
         </plugin>
 
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
+          <groupId>net.ltgt.gwt.maven</groupId>
           <artifactId>gwt-maven-plugin</artifactId>
           <version>${gwt-maven-plugin.version}</version>
+          <extensions>true</extensions>
           <configuration>
-            <extra>${project.build.directory}/gwt/extra</extra>
-            <gen>${project.build.directory}/gwt/gen</gen>
-            <persistentunitcachedir>${project.build.directory}/gwt/cache</persistentunitcachedir>
-            <mode>htmlunit</mode>
-            <userAgents>gecko1_8</userAgents>
-            <testTimeOut>1000</testTimeOut>
+            <sourceLevel>17</sourceLevel>
             <!--Only required due to a GWT DateTimeFormat issue see https://github.com/gwtproject/gwt/issues/8259-->
-            <extraJvmArgs>-Duser.timezone=UTC</extraJvmArgs>
-          </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>com.google.gwt</groupId>
-              <artifactId>gwt-user</artifactId>
-              <version>${gwt.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>com.google.gwt</groupId>
-              <artifactId>gwt-dev</artifactId>
-              <version>${gwt.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>com.google.gwt</groupId>
-              <artifactId>gwt-servlet</artifactId>
-              <version>${gwt.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>com.google.gwt</groupId>
-              <artifactId>gwt-codeserver</artifactId>
-              <version>${gwt.version}</version>
-            </dependency>
-          </dependencies>
-        </plugin>
-
-        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>gwt-maven-plugin</artifactId>
-                    <versionRange>[2.7.0,)</versionRange>
-                    <goals>
-                      <goal>resources</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
+            <jvmArgs>
+              <arg>-Duser.timezone=UTC</arg>
+              <arg>--add-opens</arg><arg>java.base/java.lang=ALL-UNNAMED</arg>
+              <arg>--add-opens</arg><arg>java.base/java.io=ALL-UNNAMED</arg>
+              <arg>--add-opens</arg><arg>java.base/java.util=ALL-UNNAMED</arg>
+              <arg>--add-opens</arg><arg>java.base/java.lang.reflect=ALL-UNNAMED</arg>
+            </jvmArgs>
           </configuration>
         </plugin>
       </plugins>
